maked main navigation

--- a/index.html
+++ b/index.html
@@ -26,6 +26,55 @@
       <div class="main-title">
         <h1>Funny Island</h1>
       </div>
+
+      <div class="main-block-container">
+        <div class="main-nav-block">
+          <a class="main-nav-link" href="#">
+            <div class="main-nav-item">
+              <img src="img/promotion-16x16.png" alt="">
+              <h1>Promotion</h1>
+            </div>
+          </a>
+          <a class="main-nav-link" href="#">
+            <div class="main-nav-item">
+              <img src="img/ticket-16x16.png" alt="">
+              <h1>Tickets</h1>
+            </div>
+          </a>
+          <a class="main-nav-link" href="#">
+            <div class="main-nav-item">
+              <img src="img/wheel-16x16.png" alt="">
+              <h1>Attractions</h1>
+            </div>
+          </a>
+          <a class="main-nav-link" href="#">
+            <div class="main-nav-item">
+              <img src="img/financial-16x16.png" alt="">
+              <h1>Financial Report</h1>
+            </div>
+          </a>
+          <a class="main-nav-link" href="#">
+            <div class="main-nav-item">
+              <img src="img/about-16x16.png" alt="">
+              <h1>About Company</h1>
+            </div>
+          </a>
+          <a class="main-nav-link" href="#">
+            <div class="main-nav-item">
+              <img src="img/career-16x16.png" alt="">
+              <h1>Careers</h1>
+            </div>
+          </a>
+          <a class="main-nav-link" href="#">
+            <div class="main-nav-item">
+              <img src="img/news-16x16.png" alt="">
+              <h1>Events & News</h1>
+            </div>
+          </a>        
+        </div>
+
+        
+      </div>
     </div>
     
     <script src="js/jquery-3.4.1.min.js"></script>
