promotion page done

--- a/index.html
+++ b/index.html
@@ -73,7 +73,13 @@
           </a>        
         </div>
 
-        
+        <div class="promotion-block">
+          <div class="promotion-text-block">
+            <img class="promotion-icon" src="img/promotion-16x16.png" alt="">
+            <p>2 adults, 1 kid free promotion during December</p>
+          </div>
+          <img class="promotion-main-img" src="img/promotion-img.jpg" alt="">
+        </div>
       </div>
     </div>
     
