about page maked

--- a/html/about.html
+++ b/html/about.html
@@ -74,6 +74,18 @@
         </div>
 
         
+        <div class="about-block clearfix">
+          <img class="icon" src="../img/about-16x16.png" alt="">
+          <h1 class="about-title">About Company</h1>
+          <p>We have 3 theme parks in Scandinabia.</p>
+          <ol>
+            <li>1. Stockholm</li>
+            <li>2. Gothenburg</li>
+            <li>3. Oslo</li>
+          </ol>
+          <img class="about-main-img" src="../img/AxG_Pixel_Europe-2x.png" alt="">
+        </div>
+
       </div>
     </div>
     
