attractions page maked

--- a/html/attractions.html
+++ b/html/attractions.html
@@ -73,7 +73,38 @@
           </a>    
         </div>
 
-        
+
+        <div class="attractions-block">
+          <div class="attractions-header">
+            <img src="../img/wheel-16x16.png" alt="" class="icon">
+            <h1 class="attractions-title">Attractions</h1>
+          </div>
+          <div class="attractions-item">
+            <img src="../img/atr1.jpg" alt="">
+            <div class="item-text-block">
+              <p>Enjoy the night</p>
+            </div>
+          </div>
+          <div class="attractions-item">
+            <img src="../img/atr2.jpg" alt="">
+            <div class="item-text-block">
+              <p>Park in birdview</p>
+            </div>
+          </div>
+          <div class="attractions-item">
+            <img src="../img/atr3.jpg" alt=""> 
+            <div class="item-text-block">
+              <p>Crazy tower!</p>
+            </div>
+          </div>
+          <div class="attractions-item">
+            <img src="../img/atr4.jpg" alt="">
+            <div class="item-text-block">
+              <p>Roller Coster</p>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
     
