careers page maked

--- a/html/careers.html
+++ b/html/careers.html
@@ -73,6 +73,45 @@
           </a>        
         </div>
 
+        <div class="attractions-block">
+          <div class="attractions-header">
+            <img src="../img/career-16x16.png" alt="" class="icon">
+            <h1 class="attractions-title">Careers</h1>
+            <p>We have 5 jobs opening</p>
+          </div>
+          <div class="attractions-item">
+            <img src="../img/car1.jpg" alt="">
+            <div class="item-text-block">
+              <p>Carpenter</p>
+            </div>
+          </div>
+          <div class="attractions-item">
+            <img src="../img/car2.jpg" alt="">
+            <div class="item-text-block">
+              <p>Park Helper</p>
+            </div>
+          </div>
+          <div class="attractions-item">
+            <img src="../img/car3.jpg" alt=""> 
+            <div class="item-text-block">
+              <p>Financial manager</p>
+            </div>
+          </div>
+          <div class="attractions-item">
+            <img src="../img/car4.jpg" alt="">
+            <div class="item-text-block">
+              <p>Mobile app developer</p>
+            </div>
+          </div>
+          <div class="attractions-item">
+            <img src="../img/car5.jpg" alt="">
+            <div class="item-text-block">
+              <p>Copywriter</p>
+            </div>
+          </div>
+          <p class="footer-text-1">Please send your cover letter and resume via email: <span class="under">funnyisland@example.com.</span></p>
+          <p class="footer-text-2"><span class="under">Learn more about our benefits.</span></p>
+        </div>
         
       </div>
     </div>
