financial page maked

--- a/html/financial.html
+++ b/html/financial.html
@@ -73,6 +73,24 @@
           </a>        
         </div>
 
+        <div class="financial-block">
+          <img src="../img/financial-16x16.png" alt="" class="icon">
+          <h1 class="financial-title">Financial Report</h1>
+          <br>
+          <div class="financial-center-block">
+            <div class="text-block">
+              FUNI as of 13:45, 1st December, 2016: <br>
+              Pricing delayed by 15 min.
+            </div>
+            <div class="price-block">
+              $93.85
+            </div>
+          </div>
+          <br>
+          <btn class="download-btn">
+            Download Q3 Financial Report
+          </btn>
+        </div>
         
       </div>
     </div>
