add footer and fix struct files

--- a/html/about.html
+++ b/html/about.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="../css/reset.css"> 
     <link rel="stylesheet" href="../css/fonts.css">
+    <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/about.css">
     
     <title>SevSU Web Project</title>
@@ -86,6 +87,10 @@
           <img class="about-main-img" src="../img/AxG_Pixel_Europe-2x.png" alt="">
         </div>
 
+      </div>
+
+      <div class="footer">
+        <p>(c) 2016, Funny Island Company, Attraction photos from Unsplash. Europe map public domain.</p>
       </div>
     </div>
     
