--- a/html/attractions.html
+++ b/html/attractions.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="../css/reset.css"> 
     <link rel="stylesheet" href="../css/fonts.css">
+    <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/attractions.css">
     
     <title>SevSU Web Project</title>
@@ -105,6 +106,10 @@
           </div>
         </div>
 
+      </div>
+
+      <div class="footer">
+        <p>(c) 2016, Funny Island Company, Attraction photos from Unsplash. Europe map public domain.</p>
       </div>
     </div>
     
