--- a/html/attractions.html
+++ b/html/attractions.html
@@ -1,28 +1,31 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="../css/reset.css"> 
-    <link rel="stylesheet" href="../css/fonts.css">
-    <link rel="stylesheet" href="../css/index.css">
-    <link rel="stylesheet" href="../css/attractions.css">
-    
-    <title>SevSU Web Project</title>
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <div class="top-nav">
-      <div class="top-nav-container">
-        <div class="top-nav-item"><a href="">About</a></div>
-        <div class="top-nav-item"><a href="#">Investors</a></div>
-        <div class="top-nav-item"><a href="#">Careers</a></div>
-        <div class="top-nav-item"><a href="#">Environment</a></div>
-        <div class="top-nav-item"><a href="#">EN/SE/NO/FI</a></div>
-      </div>
+  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/fonts.css">
+  <link rel="stylesheet" href="../css/index.css">
+  <link rel="stylesheet" href="../css/attractions.css">
+
+  <title>SevSU Web Project</title>
+</head>
+
+<body>
+
+  <div class="top-nav">
+    <div class="top-nav-container">
+      <div class="top-nav-item"><a href="">About</a></div>
+      <div class="top-nav-item"><a href="#">Investors</a></div>
+      <div class="top-nav-item"><a href="#">Careers</a></div>
+      <div class="top-nav-item"><a href="#">Environment</a></div>
+      <div class="top-nav-item"><a href="#">EN/SE/NO/FI</a></div>
     </div>
+  </div>
 
+  <div class="border">
     <div class="main-background">
       <div class="main-title">
         <h1>Funny Island</h1>
@@ -71,7 +74,7 @@
               <img src="../img/news-16x16.png" alt="">
               <h1>Events & News</h1>
             </div>
-          </a>    
+          </a>
         </div>
 
 
@@ -93,7 +96,7 @@
             </div>
           </div>
           <div class="attractions-item">
-            <img src="../img/atr3.jpg" alt=""> 
+            <img src="../img/atr3.jpg" alt="">
             <div class="item-text-block">
               <p>Crazy tower!</p>
             </div>
@@ -112,8 +115,10 @@
         <p>(c) 2016, Funny Island Company, Attraction photos from Unsplash. Europe map public domain.</p>
       </div>
     </div>
-    
-    <script src="../js/jquery-3.4.1.min.js"></script>
-    <script src="../js/index.js"></script>
-  </body>
+  </div>
+
+  <script src="../js/jquery-3.4.1.min.js"></script>
+  <script src="../js/index.js"></script>
+</body>
+
 </html>
