maked layout tickets page

--- a/html/tickets.html
+++ b/html/tickets.html
@@ -77,6 +77,63 @@
           </a>
         </div>
 
+        <div class="tickets-block">
+          <img src="../img/ticket-16x16.png" alt="" class="icon">
+          <h1 class="ticket-title">Tickets and Admission</h1>
+          <p class="subtext">Amount of Guest</p>
+
+          <div class="top-form">
+            <div class="top-form-item">
+              <p>Adult:</p>
+              <input type="number" value="1">
+            </div>
+            <div class="top-form-item">
+              <p>Children:</p>
+              <input type="number" value="1">
+            </div>
+            <div class="top-form-item">
+              <p>Senior:</p>
+              <input type="number" value="1">
+            </div>
+          </div>
+
+          <div class="center-container">
+            <div class="left-form">
+              <div class="left-form-item">
+                <p>Adult 1</p>
+                <input class="input-text" type="text">
+                <input class="input-cb" type="checkbox" name="" id="cb1">
+                <label for="cb1">+ Fast Pass>></label>
+              </div>
+              <div class="left-form-item">
+                <p>Children 1</p>
+                <input class="input-text" type="text">
+                <input class="input-cb" type="checkbox" name="" id="cb2">
+                <label for="cb2">+ Fast Pass>></label>
+              </div>
+              <div class="left-form-item">
+                <p>Senior 1</p>
+                <input class="input-text" type="text">
+                <input class="input-cb" type="checkbox" name="" id="cb3">
+                <label for="cb3">+ Fast Pass>></label>
+              </div>
+            </div>
+  
+            <div class="render-block">
+              <div class="render-item">
+                <p>Name 1</p>
+              </div>
+              <div class="render-item">
+                <p>Name 2</p>
+              </div>
+              <div class="render-item">
+                <p>Name 3</p>
+              </div>
+            </div>
+          </div>
+
+          <button class="confirm-btn">Checkout and Confirm the tickets</button>
+        </div>
 
       </div>
 
