--- a/html/tickets.html
+++ b/html/tickets.html
@@ -85,15 +85,15 @@
           <div class="top-form">
             <div class="top-form-item">
               <p>Adult:</p>
-              <input type="number" value="1">
+              <input type="number" max="10" min="1" value="1">
             </div>
             <div class="top-form-item">
               <p>Children:</p>
-              <input type="number" value="1">
+              <input type="number" max="10" min="1" value="1">
             </div>
             <div class="top-form-item">
               <p>Senior:</p>
-              <input type="number" value="1">
+              <input type="number" max="10" min="1" value="1">
             </div>
           </div>
 
@@ -101,26 +101,27 @@
             <div class="left-form">
               <div class="left-form-item">
                 <p>Adult 1</p>
-                <input class="input-text" type="text">
-                <input class="input-cb" type="checkbox" name="" id="cb1">
-                <label for="cb1">+ Fast Pass>></label>
+                <input id="t1" class="input-text" type="text"><br>
+                <input id="c1" class="input-cb" type="checkbox" name="">
+                <label for="c1">+ Fast Pass>></label>
               </div>
               <div class="left-form-item">
                 <p>Children 1</p>
-                <input class="input-text" type="text">
-                <input class="input-cb" type="checkbox" name="" id="cb2">
-                <label for="cb2">+ Fast Pass>></label>
+                <input id="t2" class="input-text" type="text"><br>
+                <input id="c2" class="input-cb" type="checkbox" name="">
+                <label for="c2">+ Fast Pass>></label>
               </div>
               <div class="left-form-item">
                 <p>Senior 1</p>
-                <input class="input-text" type="text">
-                <input class="input-cb" type="checkbox" name="" id="cb3">
-                <label for="cb3">+ Fast Pass>></label>
+                <input id="t3" class="input-text" type="text"><br>
+                <input id="c3" class="input-cb" type="checkbox" name="">
+                <label for="c3">+ Fast Pass>></label>
               </div>
             </div>
   
             <div class="render-block">
-              <div class="render-item">
+
+              <!-- <div class="render-item">
                 <p>Name 1</p>
               </div>
               <div class="render-item">
@@ -128,7 +129,7 @@
               </div>
               <div class="render-item">
                 <p>Name 3</p>
-              </div>
+              </div> -->
             </div>
           </div>
 
@@ -144,7 +145,7 @@
   </div>
 
   <script src="../js/jquery-3.4.1.min.js"></script>
-  <script src="../js/index.js"></script>
+  <script src="../js/tickets.js"></script>
 </body>
 
 </html>
