--- a/html/news.html
+++ b/html/news.html
@@ -87,7 +87,7 @@
   </div>
 
   <script src="../js/jquery-3.4.1.min.js"></script>
-  <script src="../js/index.js"></script>
+  <script src="../js/news.js"></script>
 </body>
 
 </html>
