--- a/html/news.html
+++ b/html/news.html
@@ -77,9 +77,78 @@
           </a>
         </div>
 
+        <div class="news-block">
+          <img src="../img/news-16x16.png" alt="" class="icon">
+          <h1 class="news-title">Events & News</h1>
+          <div class="news-container">
+
+            <div class="news-item-border" id="border1">
+              <div class="news-item" id="item1">
+                <div class="date-block">
+                  <img src="../img/news-16x16.png" alt="">
+                  <p>2016-12-01</p>
+                </div>
+                <h1 class="news-item-title">
+                  Upcoming theme park opening in Lisbon in 2018.
+                </h1>
+                <p class="news-item-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid minima,
+                  veritatis temporibus inventore nobis asperiores aspernatur quam, sint quo voluptatum vel vero repellat
+                  totam maxime deserunt, nam a ipsa sequi!</p>
+                <div class="news-item-btn" id="btn1">Read more</div>
+              </div>
+            </div>
+
+            <div class="news-item-border" id="border2">
+              <div class="news-item" id="item2">
+                <div class="date-block">
+                  <img src="../img/news-16x16.png" alt="">
+                  <p>2016-12-01</p>
+                </div>
+                <h1 class="news-item-title">
+                  Upcoming theme park opening in Lisbon in 2018.
+                </h1>
+                <p class="news-item-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid minima,
+                  veritatis temporibus inventore nobis asperiores aspernatur quam, sint quo voluptatum vel vero repellat
+                  totam maxime deserunt, nam a ipsa sequi!</p>
+                <div class="news-item-btn" id="btn2">Read more</div>
+              </div>
+            </div>
+
+            <div class="news-item-border" id="border3">
+              <div class="news-item" id="item3">
+                <div class="date-block">
+                  <img src="../img/news-16x16.png" alt="">
+                  <p>2016-12-01</p>
+                </div>
+                <h1 class="news-item-title">
+                  Upcoming theme park opening in Lisbon in 2018.
+                </h1>
+                <p class="news-item-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid minima,
+                  veritatis temporibus inventore nobis asperiores aspernatur quam, sint quo voluptatum vel vero repellat
+                  totam maxime deserunt, nam a ipsa sequi!</p>
+                <div class="news-item-btn" id="btn3">Read more</div>
+              </div>
+            </div>
+
+            <div class="news-item-border" id="border4">
+              <div class="news-item" id="item4">
+                <div class="date-block">
+                  <img src="../img/news-16x16.png" alt="">
+                  <p>2016-12-01</p>
+                </div>
+                <h1 class="news-item-title">
+                  Upcoming theme park opening in Lisbon in 2018.
+                </h1>
+                <p class="news-item-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid minima,
+                  veritatis temporibus inventore nobis asperiores aspernatur quam, sint quo voluptatum vel vero repellat
+                  totam maxime deserunt, nam a ipsa sequi!</p>
+                <div class="news-item-btn" id="btn4">Read more</div>
+              </div>
+            </div>
+          </div>
+        </div>
 
       </div>
-
       <div class="footer">
         <p>(c) 2016, Funny Island Company, Attraction photos from Unsplash. Europe map public domain.</p>
       </div>
